--- a/index.html
+++ b/index.html
@@ -9,45 +9,13 @@
    href="/node_modules/normalize.css/normalize.css">
   <link rel="stylesheet" 
   href="/node_modules/font-awesome/font-awesome.css">
-  <link rel="stylesheet"
-   href="/dist/css/style.css">
   
 </head>
 <body>
-  <!-- font-awesome 技能点，解决特写问题
-  10%页面要用到， -->
-  <!-- 按需加载，
-  单独加一下， http数， 单独的打包,
-  dist/bundle1.js.... -->
-  <!-- normalize 不是一定要打包， -->
-  <!-- 整站开发？ 比较多
-  模块式地开发，很多个/dist
-  通用性的模块，不要乱打包, 
-  资源的重复加载  -->
-  <div id="app" class="container">
-    <div class="todo-wrapper">
-      <div class="todo-header">
-          <div class="overlay"></div>
-          <time class="clearfix">
-            <span class="day">2</span>
-            <span class="dayofweek">周二</span>
-            <span class="month">1, 2018</span>
-          </time>
-          <div class="add-circle">
-            <i class="fa fa-plus"></i>
-          </div>
-      </div>
-        <div class="todo-content">
-      <!-- <todo-report></todo-report> -->
-      <div class="todo-content-title">
-        <h2>Your tasks</h2>
-        <p class="task-report">
-          <span class="task-remain">
-            0 完成</span> / 3 (任务)
-        </p>
-      </div>
-    </div>
-    </div>
-  </div>
+  <!-- mvvm加组件 
+  webpack 打包的js,
+  向root挂载组件就好 -->
+  <div id="root"></div>
+  <script src="./dist/js/bundle.js"></script>
 </body>
 </html>
